objects/SVMXC__Entitlement_History__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Object that stores complete entitlement history of cases/installed products.</description>
    <fields>
        <fullName>OdasevaArchivedCaseId__c</fullName>
        <description>This field is used by Odaseva archiving solution in order to store the case id of archived cases. Required in 18-char format</description>
        <externalId>true</externalId>
        <label>OdasevaArchivedCaseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseNumber__c</fullName>
        <label>OdasevaArchivedCaseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseURL__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(OdasevaArchivedCaseId__c)),NOT(ISBLANK(OdasevaArchivedCaseNumber__c))),HYPERLINK($Label.OdasevaArchivedCaseUrlPrefix &amp; OdasevaArchivedCaseId__c, OdasevaArchivedCaseNumber__c),&quot;No archived case to display&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Odaseva Archived Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Case Line for which entitlement check was performed</description>
        <label>Case Line</label>
        <referenceTo>SVMXC__Case_Line__c</referenceTo>
        <relationshipLabel>Service/Maintenance History</relationshipLabel>
        <relationshipName>Service_Maintenance_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Case object</description>
        <inlineHelpText>Reference to Case object</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>R00N70000001hzeTEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Covered_By__c</fullName>
        <label>Covered By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Date_of_entitlement__c</fullName>
        <description>Date of entitlement</description>
        <inlineHelpText>Date of entitlement</inlineHelpText>
        <label>Date of entitlement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Days_To_Warranty_Expiry__c</fullName>
        <description>Number of days left in the warranty when this entitlement was made. Calculated automatically.</description>
        <formula>SVMXC__End_Date__c - SVMXC__Date_of_entitlement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days left in the warranty when this entitlement was made. Calculated automatically.</inlineHelpText>
        <label>Days To Warranty Expiry</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date__c</fullName>
        <description>End date of service contract or warranty at the time of entitlement</description>
        <inlineHelpText>Warranty end date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitled_By_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Service Contract Contact</description>
        <inlineHelpText>Reference to Service Contract Contact</inlineHelpText>
        <label>Entitled By Contact</label>
        <referenceTo>SVMXC__Service_Contract_Contacts__c</referenceTo>
        <relationshipName>R00N70000001hzeGEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitled_By_IB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Service Contract product</description>
        <inlineHelpText>Reference to Service Contract product</inlineHelpText>
        <label>Entitled By IB</label>
        <referenceTo>SVMXC__Service_Contract_Products__c</referenceTo>
        <relationshipName>R00N70000001hzdDEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitled_By_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Service Contract Service</description>
        <inlineHelpText>Reference to Service Contract Service</inlineHelpText>
        <label>Entitled By Service</label>
        <referenceTo>SVMXC__Service_Contract_Services__c</referenceTo>
        <relationshipName>R00N70000001hzeXEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitled_By_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Service Contract Site</description>
        <inlineHelpText>Reference to Service Contract Site</inlineHelpText>
        <label>Entitled By Site</label>
        <referenceTo>SVMXC__Service_Contract_Sites__c</referenceTo>
        <relationshipName>R00N70000001hzWtEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitled_Within_Threshold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entitled Within Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_notes__c</fullName>
        <description>Additional information entered in Case during customer entitlement</description>
        <inlineHelpText>Additional information entered in Case during customer entitlement</inlineHelpText>
        <label>Entitlement notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Exchange_Type__c</fullName>
        <description>Type of exchange allowed as the outcome of entitlement verification.</description>
        <label>Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Inactive_Date__c</fullName>
        <description>Date on which this entitlement record was inactivated to enable reentitlement</description>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__RMA_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the RMA Line for which entitlement check was performed</description>
        <label>RMA Line</label>
        <referenceTo>SVMXC__RMA_Shipment_Line__c</referenceTo>
        <relationshipLabel>Service/Maintenance History</relationshipLabel>
        <relationshipName>Service_Maintenance_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service level the customer is entitled to by this entitlement event</description>
        <inlineHelpText>Service level the customer is entitled.</inlineHelpText>
        <label>SLA Terms</label>
        <referenceTo>SVMXC__Service_Level__c</referenceTo>
        <relationshipLabel>Service/Maintenance History</relationshipLabel>
        <relationshipName>Service_Maintenance_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service contract used in entitlement. Reference to service contract.</description>
        <inlineHelpText>Service contract used in entitlement. Reference to service contract.</inlineHelpText>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Service/Maintenance History</relationshipLabel>
        <relationshipName>R00N70000001hzcQEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work order entitled by this entitlement event. Not used</description>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Entitlement History</relationshipLabel>
        <relationshipName>Entitlement_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Date__c</fullName>
        <description>Start date of service contract/warranty at the time of entitlement</description>
        <inlineHelpText>Start date of service contract/warranty at the time of entitlement</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Warranty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Warranty used in entitlement. Reference to warranty record</description>
        <inlineHelpText>Warranty used in entitlement. Reference to warranty record</inlineHelpText>
        <label>Product Warranty</label>
        <referenceTo>SVMXC__Warranty__c</referenceTo>
        <relationshipLabel>Service/Maintenance History</relationshipLabel>
        <relationshipName>R00N70000001hzecEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Detail</label>
        <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
        <relationshipLabel>Entitlement History</relationshipLabel>
        <relationshipName>Service_Maintenance_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service/Maintenance History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Case__c</columns>
        <columns>SVMXC__Service_Order__c</columns>
        <columns>SVMXC__Date_of_entitlement__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SVMXC__Entitlement_notes__c</columns>
        <columns>SVMXC__Start_Date__c</columns>
        <columns>SVMXC__End_Date__c</columns>
        <columns>SVMXC__Covered_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SVMXC__Case__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EHN-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service/Maintenance History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>